* Quote all string values when serializing, so as to be more compatible
  with real YAML implementations.

* If we crash for any reason, write it to the log. Make debug logging a
  bit more useful in general and regular logging perhaps a bit less
  annoying.

0.18 (2006-02-06):
==================

* Gratuitously renamed all the "other" programs. For consistency with
  lastmp, the thing that takes a log and sends it to the daemon is now
  named lastcd. The thing that used to be lastcd, which only fetches
  data from MusicBrainz and is not Last.fm-specific, is now named mbget.
  For consistency with that, mbfindalbum is now simply named mbfind. And
  for symmetry with those two, I have added mbsubmit, which assists in
  sending disc IDs to MusicBrainz.

* Added a --freedb option to mbget, which fakes a CDDB-format listing
  suitable for use with abcde or other CD-ripping programs which use
  FreeDB.

* If lastmp starts when a song is after 4:00 but not at 50%, assume it
  was already submitted at 4:00 and don't submit it again.

* Rather than replacing invalid data in lastfmsubmit, try UTF-8 and then
  the locale encoding (this can still be overridden with --encoding). If
  neither work, abort rather than sending something corrupted.

0.17 (2006-01-30):
==================

* Got rid of the old install. The new way of doing things is: One
  user/group lastfm:lastfm, everything in /var/{log,run,cache}/lastfm
  (which must be created by root), we own and always fix permissions of
  files in those directories. Put better instructions for this in
  INSTALL, install-example.sh, and init-example.sh. If you have an
  existing setup, please change it! It will no longer be compatable with
  the Debian package.

* The daemons now fork into the background by default. Added a
  --no-daemon option to prevent this.

* Replaced the asyaml format with a simple marshaller module that uses a
  format much closer to a simple YAML map. It should now be trivial to