@@ -4,6 +4,8 @@ import sys
 import getopt
 import musicbrainz
 
+import lastfm.mbutil
+
 class Abby(musicbrainz.mb):
     def __init__(self):
         musicbrainz.mb.__init__(self)
@@ -136,6 +138,8 @@ if __name__ == '__main__':
     except getopt.GetoptError, e:
         print >>sys.stderr, 'error: %s' % e
         sys.exit(1)
+
+    sys.stdout = lastfm.mbutil.EncodedFile(sys.stdout)
 
     abby = Abby()
     discid = None
